--- a/web/linuxperf/backend.css
+++ b/web/linuxperf/backend.css
@@ -1,3 +1,8 @@
+/*
+SPDX-FileCopyrightText: 2025 CERN
+SPDX-License-Identifier: GPL-3.0-or-later
+*/
+
 .linuxperf_timeline_window {
     min-width:1000px;
     width:1000px;
